# CalculationMethodsLab1

./: .gitignore  CMakeLists.txt  Practice.sln  README.md
.github/workflows/: ccpp.yml
Practice/: ArnoldiGMRES.cpp  ArnoldiGMRES.h  Cholesky.cpp  Cholesky.h  ConditionNumber.cpp  ConditionNumber.h  GMRES.cpp  GMRES.h  Gauss.cpp  Gauss.h  Householder.cpp  Householder.h  LUP.cpp  LUP.h  LeastSquares.cpp  LeastSquares.h  Main.cpp  Matrix.cpp  Matrix.h  Practice.vcxproj  Practice.vcxproj.filters  Relaxation.cpp  Relaxation.h  Utils.cpp  Utils.h
Reports/: report.txt
Sources/: ArnoldiGMRES.cpp  ArnoldiGMRES.h  Cholesky.cpp  Cholesky.h  Gauss.cpp  Householder.cpp  LeastSquares.h  Matrix.cpp  Relaxation.cpp
